# spacecraftsim

./: .gitignore  README.md  client.py  client_config.json  pyproject.toml  rokt-protocol.txt
client/: client.py  config.py  main.py  messages.py  networking.py  tui.py  tutorial.py  utils.py  widgets.py
server/: commands.py  logging.py  main.py  networking.py  rocketry.py  scs_logger.py
spacecraftsim/: commands.py  config.py  networking.py  rocketry.py  server.py
